--- a/resume.html
+++ b/resume.html
@@ -466,6 +466,10 @@ include_page2_header: true
 <details id="hobbies"> <a name="interests"></a> <a name="hobbiesandinterests"></a>
     <summary>Hobbies and Interests</summary>
     <ul class="hobbies-list">
+        <li>Coding</li>
+        <li>Refactoring</li>
+        <li>Mentoring</li>
+        <li>Learning New Skills</li>
         <li>Private Pilot</li>
         <li>Football</li>
         <li>Snow Skiing</li>
