fixing another copy/paste problem

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@ include_page2_header: true
 {% include resume/summary.html %}
 {% include resume/professionalskills.html %}
 {% include resume/employmenthistory.html %}
-{% include resume/certifications.html %}
+{% include resume/education.html %}
 {% include resume/certifications.html %}
 {% include resume/patents.html %}
 {% include resume/publications.html %}
