--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,8 @@ layout: default
 title: "Resume"
 enable_cover_letter: true
 include_page2_header: true
-print-resume-title: "Principal Software Engineer - Tom DeMay Resume - 2023-06"
-print-cv-title: "Principal Software Engineer - Tom DeMay CV - 2023-06"
+resume-pdf-title: "Principal Software Engineer - Tom DeMay Resume - 2023-06"
+cv-pdf-title: "Principal Software Engineer - Tom DeMay CV - 2023-06"
 ---
 
 {% include resume/headline.html %}
@@ -18,14 +18,13 @@ print-cv-title: "Principal Software Engineer - Tom DeMay CV - 2023-06"
 {% include resume/hobbies.html %}
 
 <script>
+    function getPdfTitle() {
+        var checkbox = document.getElementById('show-cover-letter-checkbox');
+        return checkbox.checked ? "{{ page.cv-pdf-title }}" : "{{ page.resume-pdf-title }}";
+    }
     window.addEventListener('beforeprint', function() {
-        var checkbox = document.getElementById('show-cover-letter-checkbox');            
         var pageTitle = document.getElementsByTagName('title')[0];
-        if (checkbox.checked) {
-            pageTitle.innerText = "{{ page.print-cv-title }}";
-        } else {
-            pageTitle.innerText = "{{ page.print-resume-title }}";
-        }
+        pageTitle.innerText = getPdfTitle();
     });
     window.addEventListener('afterprint', function() {
         updateTitle();
