--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,8 @@ layout: default
 title: "Resume"
 enable_cover_letter: true
 include_page2_header: true
-resume-pdf-title: "Principal Software Engineer - Tom DeMay Resume - 2023-06"
-cv-pdf-title: "Principal Software Engineer - Tom DeMay CV - 2023-06"
+resume-pdf-title: "Resume - Tom DeMay - Principal Software Engineer - 2023-10"
+cv-pdf-title: "CV - Tom DeMay - Principal Software Engineer - 2023-10"
 ---
 
 {% include resume/headline.html %}
