refactor print format and enable print to pdf

--- a/employmenthistory.html
+++ b/employmenthistory.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Employment History"
-enable_cover_letter: false
+enable_download: false
 include_page2_header: false
 ---
 
