--- a/employmenthistory.html
+++ b/employmenthistory.html
@@ -1,17 +1,16 @@
 ---
 layout: default
 title: "Employment History"
-enable_download: false
-include_page2_header: false
+enable_print_to_pdf: false
 ---
 
 {% include resume/employmenthistory.html %}
 
 <script>
-    window.addEventListener('DOMContentLoaded', function() {
+    window.addEventListener('DOMContentLoaded', function () {
         var detailsElements = document.getElementsByTagName('details');
         for (var i = 0; i < detailsElements.length; i++) {
-          detailsElements[i].setAttribute('open', '');
+            detailsElements[i].setAttribute('open', '');
         }
     });
 </script>
