--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: "Resume"
-enable_download: true
-include_page2_header: true
+enable_print_to_pdf: true
+print_cover_letter: true
 resume-pdf-title: "Resume - Tom DeMay - Manager, Software Engineer Lead - 2024-10"
 cv-pdf-title: "CV - Tom DeMay - Manager, Software Engineer Lead - 2024-10"
 ---
