--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 ---
 layout: default
-title: "About Me"
+bullet_style_resume: false
+title: "Resume"
+enable_print_to_pdf: true
+print_cover_letter: true
+resume-pdf-title: "Resume - Tom DeMay - Manager, Software Engineer Lead - 2024-10"
+cv-pdf-title: "CV - Tom DeMay - Manager, Software Engineer Lead - 2024-10"
 ---
 
-{% include aboutme/headline.html %}
-{% include aboutme/professionalexperience.html %}
-{% include aboutme/personalexperience.html %}
+{% include resume/headline.html %}
+{% include resume/summary.html %}
+{% include resume/professionalskills.html %}
+{% include resume/employmenthistory.html %}
+{% include resume/education.html %}
+{% include resume/certifications.html %}
+{% include resume/patents.html %}
+{% include resume/publications.html %}
+{% include resume/hobbies.html %}
