Adding Ansible and separating Education and Training

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@ cv-pdf-title: "CV - Tom DeMay - Manager, Software Engineer Lead - 2024-10"
 {% include resume/summary.html %}
 {% include resume/professionalskills.html %}
 {% include resume/employmenthistory.html %}
-{% include resume/education.html %}
 {% include resume/certifications.html %}
+{% include resume/education.html %}
+{% include resume/training.html %}
 {% include resume/patents.html %}
 {% include resume/publications.html %}
 {% include resume/hobbies.html %}
