removing invalid date (2024-10) from titles and adding to readme

--- a/coverletter.html
+++ b/coverletter.html
@@ -4,8 +4,8 @@ bullet_style_resume: false
 title: "Cover Letter"
 enable_print_to_pdf: true
 print_cover_letter: true
-resume-pdf-title: "Resume - Tom DeMay - Manager, Software Engineer Lead - 2024-10"
-cv-pdf-title: "CV - Tom DeMay - Manager, Software Engineer Lead - 2024-10"
+resume-pdf-title: "Resume - Tom DeMay - Manager, Software Engineer Lead"
+cv-pdf-title: "CV - Tom DeMay - Manager, Software Engineer Lead"
 ---
 
 <style>
